--- a/D20.css
+++ b/D20.css
@@ -1,5 +1,67 @@
-.seta{
-    height: 50px;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(129, 129, 223);
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .dado {
+    position: relative;
     width: 100px;
-    transform: rotate(180deg);
-}
+    height: 100px;
+    transform-style: preserve-3d;
+    transform: rotateX(0deg) rotateY(0deg);
+    transition: transform 1s ease;
+  }
+
+  .face {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: black;
+    border: 1px solid #333;
+  }
+  
+  /* Configurações de cada face para simular um prisma pentagonal */
+  .um   { transform: rotateY(0deg) translateZ(155px); }
+  .dois { transform: rotateY(36deg) translateZ(155px); }
+  .tres { transform: rotateY(72deg) translateZ(155px); }
+  .quatro { transform: rotateY(108deg) translateZ(155px); }
+  .cinco { transform: rotateY(144deg) translateZ(155px); }
+  .seis { transform: rotateY(180deg) translateZ(155px); }
+  .sete { transform: rotateY(216deg) translateZ(155px); }
+  .oito { transform: rotateY(252deg) translateZ(155px); }
+  .nove { transform: rotateY(288deg) translateZ(155px); }
+  .dez { transform: rotateY(324deg) translateZ(155px); }
+  .onze { transform: rotateY(324deg) translateZ(155px); }
+  .doze { transform: rotateY(342deg) translateZ(155px); }
+  .treze { transform: rotateY(360deg) translateZ(155px); }
+  .face-quatroze { transform: rotateY(-36deg) translateZ(155px); }
+  .face-quinze { transform: rotateY(-72deg) translateZ(155px); }
+  .dezeseis { transform: rotateY(-108deg) translateZ(155px); }
+  .dezesete { transform: rotateY(-144deg) translateZ(155px); }
+  .dezoito { transform: rotateY(-180deg) translateZ(155px); }
+  .dezenove { transform: rotateY(-216deg) translateZ(155px); }
+  .vinte { transform: rotateY(-255deg) translateZ(155px); }
+  
+  button {
+    margin-top: 40px;
+    padding: 2px 2px;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
