--- a/D10.css
+++ b/D10.css
@@ -36,17 +36,51 @@ body {
   border: 1px solid #333;
 }
 
-/* Configurações de cada face para simular um prisma pentagonal */
-.um   { transform: rotateY(0deg) translateZ(155px); }
-.dois { transform: rotateY(36deg) translateZ(155px); }
-.tres { transform: rotateY(72deg) translateZ(155px); }
-.quatro { transform: rotateY(108deg) translateZ(155px); }
-.cinco { transform: rotateY(144deg) translateZ(155px); }
-.seis { transform: rotateY(180deg) translateZ(155px); }
-.sete { transform: rotateY(216deg) translateZ(155px); }
-.oito { transform: rotateY(252deg) translateZ(155px); }
-.nove { transform: rotateY(288deg) translateZ(155px); }
-.dez { transform: rotateY(324deg) translateZ(155px); }
+.face2{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  color: black;
+  border: 1px solid #333;
+}
+
+.um   { transform: rotateY(144deg) translateZ(100px) rotateX(-45deg); }
+
+.dois { transform: rotateY(288deg) translateZ(100px) rotateX(-45deg); }
+
+.tres { transform: rotateY(432deg) translateZ(100px) rotateX(-45deg); }
+
+.quatro { transform: rotateY(576deg) translateZ(100px) rotateX(-45deg); }
+
+.cinco { transform: rotateY(720deg) translateZ(100px) rotateX(-45deg); }
+
+.seis { transform: rotateY(144deg) translateZ(100px) rotateX(45deg); 
+  margin-top: -70px;
+}
+
+.sete { transform: rotateY(288deg) translateZ(100px) rotateX(45deg); 
+  margin-top: -70px;
+}
+
+.oito { transform: rotateY(432deg) translateZ(100px) rotateX(45deg); 
+  margin-top: -70px;
+}
+
+.nove { transform: rotateY(576deg) translateZ(100px) rotateX(45deg); 
+  margin-top: -70px;
+}
+
+.dez { transform: rotateY(720deg) translateZ(100px) rotateX(45deg);
+  margin-top: -70px;
+}
+.buracoum {
+ 
+}
 
 button {
   margin-top: 40px;
