--- a/D10.css
+++ b/D10.css
@@ -21,12 +21,13 @@ body {
   transform-style: preserve-3d;
   transform: rotateX(0deg) rotateY(0deg);
   transition: transform 1s ease;
+  margin-left: -50px;
 }
 
 .face {
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 170px;
+  height: 170px;
   background: white;
   display: flex;
   justify-content: center;
@@ -66,51 +67,13 @@ body {
 }
 
 button {
-  margin-top: 40px;
+  margin-top: 150px;
   padding: 2px 2px;
   font-size: 30px;
   cursor: pointer;
 }
 
 .tapa {
-  height: 70px;
+  height: 150px;
   
-}
-
-.buraco{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco2{ transform: rotateY(-64deg) translateZ(1px) rotateX(-50deg);
-  background-color: blue;
-}
-
-.buraco3{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-  background-color: red;
-}
-
-.buraco4{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco5{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco6{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco7{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco8{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco9{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.buraco10{ transform: rotateY(-32deg) translateZ(100px) rotateX(-40deg);
-}
-
-.tapa{
-  border-style: solid;
-  border-width: 100px 40px 0 40px;
-  border-color: white transparent transparent transparent;
 }
